--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "engines": {
+   "node": ">= 12.8.1"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.1.1",
